Home Page Half-Finished + Some Refactoring

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,10 +13,12 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 233, 76%, 56%; /* Altered */
+    --primary: 233 76% 56%; /* Altered */
     --primary-foreground: 210 40% 98%;
 
-    --secondary: 234, 32%, 23%; /* Altered */
+    --primary-hover: 233 77% 51%; /* Custom */
+
+    --secondary: 234 32% 23%; /* Altered */
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --muted: 210 40% 96.1%;
