--- a/app/globals.css
+++ b/app/globals.css
@@ -83,15 +83,15 @@
   }
 
   .font-header-1 {
-    @apply font-poppins text-[2.5rem] font-semibold;
+    @apply font-poppins text-[2rem] md:text-[2.5rem] font-semibold;
   }
 
   .font-header-2 {
-    @apply font-poppins text-[2rem] font-semibold;
+    @apply font-poppins text-[1.5rem] md:text-[2rem] font-semibold;
   }
 
   .font-header-3 {
-    @apply font-poppins text-[1.25rem] font-semibold;
+    @apply font-poppins text-[1.1rem] md:text-[1.25rem] font-semibold;
   }
 
   .font-header-4 {
